Update resume : small changes

--- a/myresume.html
+++ b/myresume.html
@@ -378,10 +378,10 @@ p {
             <div class="languages-container container-block">
                 <h2 class="container-block-title">Languages</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>English <span class="lang-desc">(Professional)</span></li>
-                    <li>Hindi <span class="lang-desc">(Professional)</span></li>
-                    <li>Marathi <span class="lang-desc">(Professional)</span></li>
-                    <li>Tulu <span class="lang-desc">(Native)</span></li>
+                    <li>English</li>
+                    <li>Hindi</li>
+                    <li>Marathi</li>
+                    <li>Tulu</li>
                 </ul>
             </div><!--//interests-->
             
@@ -586,7 +586,7 @@ p {
                     <span class="skills-title company">Others</span>: <span class="project-tagline">AJAX, Bootstrap, JSON, W3C Markup Validation</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><b>Architectural / Infrastructure</b></span>
+                    <span class="project-title"><b>Architecture / Infrastructure</b></span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Practises</span>: <span class="project-tagline">Sharding, Scalability, Caching, Loadbalancing, Modularity, Indexing</span>
