Update resume : small changes

--- a/myresume.html
+++ b/myresume.html
@@ -667,7 +667,7 @@ p {
             </section><!--//skills-section-->
             <br/>
             <section class="section projects-section">
-                <h2 class="section-title"><i class="fa fa-tasks"></i>Technical Tasks</h2>
+                <h2 class="section-title"><i class="fa fa-tasks"></i>Top Technical Tasks</h2>
                 <div class="item">
                     <ul>
                         <li>Building Laravel, NextJs project from scratch</li>
