Move Javascript on top

--- a/myresume.html
+++ b/myresume.html
@@ -559,6 +559,12 @@ p {
                     <span class="skills-title company">Practises</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization, Atomic Design Principle</span>
                 </div><!--//item-->
                 <div class="item">
+                    <span class="skills-title company">Javascript Frameworks / Libraries</span>: <span class="project-tagline">jQuery, React, TypeScript</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">React</span>: <span class="project-tagline">NextJs, Material UI</span>
+                </div><!--//item-->
+                <div class="item">
                     <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">Laravel, Symfony, Yii</span>
                 </div><!--//item-->
                 <div class="item">
@@ -566,12 +572,6 @@ p {
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">PHP Frontend Frameworks / Templating Engines</span>: <span class="project-tagline">Blade, Twig, Mustache</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">Javascript Frameworks / Libraries</span>: <span class="project-tagline">jQuery, React</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">React</span>: <span class="project-tagline">NextJs, Material UI</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Package Managers</span>: <span class="project-tagline">composer, npm, yarn</span>
