Add Edelweiss data

--- a/myresume.html
+++ b/myresume.html
@@ -332,9 +332,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h4>9+ Years Exp</h4>
-                <h3 class="tagline">Tech Lead / Advisor / Architect</h3>
-                <br/>
-                <h3 class="tagline">Staff / Cloud Engineer</h3>
+                <h3 class="tagline">Tech Lead / Architect</h3>
                 <br/>
                 <h3 class="tagline">Full Stack Developer</h3>
             </div><!--//profile-container-->
@@ -420,6 +418,18 @@ p {
             </section><!--//section-->
             <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-briefcase"></i>Experience</h2>
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Tech Lead</h3>
+                            <div class="time">Nov 2022 - Present</div>
+                        </div>
+                        <div class="company">Edelweiss Broking Limited, Bengaluru</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Edelweiss Broking Ltd. is a technology driven securities company in India that offers a wide range of financial services including broking services, distribution of financial products, short term funding for employee stock option schemes and margin trade financing facility and are one of the leading broker and distributor in India.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
@@ -667,9 +677,18 @@ p {
             </section><!--//skills-section-->
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-tasks"></i>Projects</h2>
+                <div class="company">Edelweiss Broking Limited, Bengaluru</div>
+                <div class="item">
+                    <span class="project-title"><a href="https://www.edelweiss.in/" target="_blank">Main Website</a></span>:
+                    <ul>
+                        <li>Maitainance &amp; Optimistation of the website</li>
+                        <li>Architect, Implement, Optmize React features.</li>
+                        <li>Rebuild site to make it Responsive.</li>
+                    </ul>
+                </div><!--//item-->
                 <div class="company">Civitas Learning / Edustream Software Pvt. Ltd., Pune</div>
                 <div class="item">
-                    <span class="project-title"><a href="https://www.civitaslearning.com/" target="_blank">Civitas Learning</a></span>:
+                    <span class="project-title"><a href="https://www.civitaslearning.com/" target="_blank">CMS</a></span>:
                     <ul>
                         <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
                         <li>Implement, Optmize React and Symfony features.</li>
