Add react bootstrap

--- a/myresume.html
+++ b/myresume.html
@@ -572,7 +572,7 @@ p {
                     <span class="skills-title company">Javascript Frameworks / Libraries</span>: <span class="project-tagline">jQuery, React, TypeScript</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">React</span>: <span class="project-tagline">NextJs, Material UI</span>
+                    <span class="skills-title company">React</span>: <span class="project-tagline">NextJs, Material UI, React Bootstrap</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">Laravel, Symfony, Yii</span>
