Add nodejs to profile

--- a/myresume.html
+++ b/myresume.html
@@ -569,10 +569,10 @@ p {
                     <span class="skills-title company">Practises</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization, Atomic Design Principle</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Javascript Frameworks / Libraries</span>: <span class="project-tagline">jQuery, React, TypeScript</span>
+                    <span class="skills-title company">Javascript</span>: <span class="project-tagline">jQuery, React, TypeScript, Node.js</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">React</span>: <span class="project-tagline">NextJs, Material UI, React Bootstrap</span>
+                    <span class="skills-title company">React</span>: <span class="project-tagline">NextJs, Material UI, React Bootstrap, Redux</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">Laravel, Symfony, Yii</span>
@@ -683,7 +683,7 @@ p {
                     <ul>
                         <li>Maitainance &amp; Optimistation of the website</li>
                         <li>Architect, Implement, Optmize React features.</li>
-                        <li>Rebuild site to make it Responsive.</li>
+                        <li>Rebuild site to make it responsive.</li>
                     </ul>
                 </div><!--//item-->
                 <div class="company">Civitas Learning / Edustream Software Pvt. Ltd., Pune</div>
@@ -696,6 +696,7 @@ p {
                         <li>Webpack (Caching, Code Splitting, Multi Page Application)</li>
                         <li>Zoom Video Calling Integration</li>
                         <li>Yarn - maintaining, optimising package.json</li>
+                        <li>Introduce Node.js as backend</li>
                     </ul>
                 </div><!--//item-->
                 <div class="company">Blenheim Chalcot IT Services India Pvt. Ltd., Mumbai</div>
