Update resume - Add end date to edelweiss

--- a/myresume.html
+++ b/myresume.html
@@ -422,7 +422,7 @@ p {
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Tech Lead</h3>
-                            <div class="time">Nov 2022 - Present</div>
+                            <div class="time">Nov 2022 - Dec 2022</div>
                         </div>
                         <div class="company">Edelweiss Broking Limited, Bengaluru</div>
                     </div><!--//meta-->
@@ -681,9 +681,11 @@ p {
                 <div class="item">
                     <span class="project-title"><a href="https://www.edelweiss.in/" target="_blank">Main Website</a></span>:
                     <ul>
+                        <li>Lead a team of 12 (includes UI dev, Devs, QA)</li>
                         <li>Maitainance &amp; Optimistation of the website</li>
                         <li>Architect, Implement, Optmize React features.</li>
                         <li>Rebuild site to make it responsive.</li>
+                        <li>Conducting React, JavaScript Interviews</li>
                     </ul>
                 </div><!--//item-->
                 <div class="company">Civitas Learning / Edustream Software Pvt. Ltd., Pune</div>
@@ -697,6 +699,7 @@ p {
                         <li>Zoom Video Calling Integration</li>
                         <li>Yarn - maintaining, optimising package.json</li>
                         <li>Introduce Node.js as backend</li>
+                        <li>Conducting React, Javascript, PHP Interviews</li>
                     </ul>
                 </div><!--//item-->
                 <div class="company">Blenheim Chalcot IT Services India Pvt. Ltd., Mumbai</div>
@@ -704,6 +707,7 @@ p {
                     <span class="project-title"><a href="https://platinumclubnet.com/" target="_blank">Avado</a></span>:
                     <span class="project-tagline">AVADO Learning is a web and mobile-based platform that offers e-learning courses on marketing, human resource, accounting and leadership management. AVADO's headquarters is located in London.</span>
                     <ul>
+                        <li>Lead a team of 5 (includes Frontend dev, Backend Devs, QA)</li>
                         <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
                         <li>Line Manage a team of developers and testers</li>
                         <li>Implement Laravel/Symfony features.</li>
@@ -716,6 +720,7 @@ p {
                     <span class="project-title"><a href="https://platinumclubnet.com/" target="_blank">PlatinumClubNet</a></span>:
                     <span class="project-tagline">PlatinumClubNet enables members of Platinum Clubs® of America and Platinum Clubs® of the World to engage, network and create new experiences, enhancing value, benefits and relationships.</span>
                     <ul>
+                        <li>Lead a team of 3 (includes Devs, QA)</li>
                         <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
                         <li>Line Manage teams of developers and testers</li>
                         <li>Implement Laravel features.</li>
@@ -771,6 +776,7 @@ p {
                 <div class="item">
                     <span class="project-title"><a href="" target="_blank">Telcom</a></span>: <span class="project-tagline">Medisurge provides health content and services (VAS) to Telcoms.</span>
                     <ul>
+                        <li>Lead a team of 2 developers</li>
                         <li>Manage Telcom Activities &amp; Developers Team</li>
                         <li>Billing integration setup with Telecommunications Vodafone, Airtel, Idea (in India), Etisalat, du (in UAE)</li>
                         <li>WURFL (Mobile Device Detection) Integration</li>
